<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNewWriting"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:gravity="top|start"
        android:layout_margin = "10dp"
        android:hint="@string/etDiaryHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSave"
        android:layout_margin = "10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewWriting" />

    <Button
        android:id="@+id/btnUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonUndo"
        android:layout_margin = "10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewWriting" />

    <TextView
        android:id="@+id/tvDiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

</androidx.constraintlayout.widget.ConstraintLayout>
